--- a/SevenSegmentDisplay/SevenSegmentDisplay/SevenSegmentDisplay.runs/impl_1/usage_statistics_webtalk.html
+++ b/SevenSegmentDisplay/SevenSegmentDisplay/SevenSegmentDisplay.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 13 17:36:41 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Apr 13 17:49:53 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>42f027f2cba04b409f9a2ed86b0252cf</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d905f46c93f35f9b96beadae42792009</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>d905f46c93f35f9b96beadae42792009</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -32,10 +32,10 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_cancel=1</TD>
-   <TD>basedialog_no=2</TD>
-   <TD>basedialog_ok=18</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=5</TD>
+   <TD>basedialog_cancel=2</TD>
+   <TD>basedialog_no=3</TD>
+   <TD>basedialog_ok=20</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=6</TD>
    <TD>closeplanner_yes=1</TD>
    <TD>cmdmsgdialog_ok=4</TD>
    <TD>constraintschooserpanel_create_file=1</TD>
@@ -43,7 +43,7 @@
    <TD>createsrcfiledialog_file_name=4</TD>
    <TD>expruntreepanel_exp_run_tree_table=2</TD>
    <TD>filesetpanel_file_set_panel_tree=38</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=37</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=41</TD>
    <TD>fpgachooser_category=1</TD>
    <TD>fpgachooser_family=1</TD>
    <TD>fpgachooser_fpga_table=6</TD>
@@ -74,7 +74,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=8</TD>
    <TD>paviews_schematic=1</TD>
    <TD>programdebugtab_open_target=14</TD>
-   <TD>programfpgadialog_program=4</TD>
+   <TD>programfpgadialog_program=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>progressdialog_background=1</TD>
    <TD>projectnamechooser_choose_project_location=3</TD>
    <TD>projectnamechooser_project_name=6</TD>
@@ -92,16 +92,16 @@
    <TD>addsources=6</TD>
    <TD>autoconnecttarget=15</TD>
    <TD>launchopentarget=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=5</TD>
    <TD>newproject=4</TD>
-   <TD>openhardwaremanager=13</TD>
+   <TD>openhardwaremanager=14</TD>
    <TD>openproject=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=5</TD>
-   <TD>programdevice=4</TD>
-   <TD>runbitgen=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=6</TD>
+   <TD>programdevice=5</TD>
+   <TD>runbitgen=10</TD>
    <TD>savefileproxyhandler=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>saveprojectas=2</TD>
-   <TD>showview=1</TD>
+   <TD>showview=2</TD>
    <TD>toolssettings=1</TD>
    <TD>viewtaskimplementation=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=1</TD>
@@ -150,23 +150,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ibuf=8</TD>
+<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
+    <TD>ibuf=8</TD>
     <TD>lut2=1</TD>
     <TD>lut3=1</TD>
-    <TD>lut4=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=9</TD>
-    <TD>obuf=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=1</TD>
+    <TD>lut6=9</TD>
+    <TD>obuf=12</TD>
+    <TD>vcc=1</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ibuf=8</TD>
+<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
+    <TD>ibuf=8</TD>
     <TD>lut2=1</TD>
     <TD>lut3=1</TD>
-    <TD>lut4=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=9</TD>
-    <TD>obuf=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=1</TD>
+    <TD>lut6=9</TD>
+    <TD>obuf=12</TD>
+    <TD>vcc=1</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -254,10 +258,10 @@
     <TD>confidence_level_overall=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.262231</TD>
+    <TD>devstatic=0.262229</TD>
     <TD>die=xc7a35tcpg236-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=14.946302</TD>
+    <TD>dynamic=14.946244</TD>
     <TD>effective_thetaja=5.0</TD>
     <TD>enable_probability=0.990000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>family=artix7</TD>
@@ -267,7 +271,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>i/o=14.562498</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=101.0 (C)</TD>
-    <TD>logic=0.080528</TD>
+    <TD>logic=0.080842</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -278,12 +282,12 @@
     <TD>mgtavtt_voltage=1.200000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=15.208533</TD>
+    <TD>on-chip_power=15.208473</TD>
     <TD>output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
-    <TD>pct_clock_constrained=2.000000</TD>
+    <TD>pct_clock_constrained=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>pct_inputs_defined=0</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
@@ -292,7 +296,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>signals=0.303277</TD>
+</TR><TR ALIGN='LEFT'>    <TD>signals=0.302905</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -321,9 +325,9 @@
     <TD>vccbram_static_current=0.004300</TD>
     <TD>vccbram_total_current=0.004300</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.415804</TD>
-    <TD>vccint_static_current=0.163087</TD>
-    <TD>vccint_total_current=0.578891</TD>
+    <TD>vccint_dynamic_current=0.415746</TD>
+    <TD>vccint_static_current=0.163085</TD>
+    <TD>vccint_total_current=0.578831</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -470,7 +474,7 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=9</TD>
     <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=8</TD>
+    <TD>obuf_used=12</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -636,8 +640,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:31s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=496.301MB</TD>
-    <TD>memory_peak=748.262MB</TD>
+    <TD>memory_gain=497.625MB</TD>
+    <TD>memory_peak=750.512MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
